--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3.4.1.js"></script>
-    <script src="js/scripts.js"></script>
-    <title></title>
-  </head>
-  <body>
-    <div class="container">
 
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.4.1.js"></script>
+  <script src="js/scripts.js"></script>
+  <title>Triangle Tracker</title>
+</head>
+
+<body>
+  <div class="container">
+    <form>
+      <div class="form-group">
+        <h1>Enter three lengths to form a triangle:</h1>
+        <input type="number" class="form-control" id="side1">
+        <br>
+        <input type="number" class="form-control" id="side2">
+        <br>
+        <input type="number" class="form-control" id="side3">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+    <div class="result">
+      <hr>
+      <p>You have made <span class="triangle-type"></span> triangle!</p>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
